:sparkles: Adding components for about-me, banner, contact form

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,18 @@
   <![endif]-->
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
+<!--
+---
+
+🌐 Desenvolvido com 💡 e ❤️ por **Agência Cria Mais**
+
+📧 Contato: [contato@agenciacriamais.com.br](mailto:contato@agenciacriamais.com.br)
+🔗 Visite: [www.agenciacriamais.com.br](http://www.agenciacriamais.com.br)
+
+📅 Data do Lançamento: 31/01/2024
+
+---
+-->
 </html>
